Polish hero spacing, remove title dividers, fix avatar backgrounds
- Add spacing between Time/Room on the hero
- Remove the divider line under all inner-page titles
- Re-encode weixs/heyangxu/QiDou avatars onto white background
  (transparent PNG -> JPG was leaving black edges)

--- a/css/site.css
+++ b/css/site.css
@@ -71,8 +71,6 @@
 .page-head-block {
     text-align: left;
     margin-bottom: 46px;
-    padding-bottom: 30px;
-    border-bottom: 1px solid #e6e6e6;
 }
 .page-head {
     color: #164FC9;
